[package]
name = "serde-beve"
authors = ["Devin Droddy <devin.droddy@gmail.com>"]
categories = ["encoding", "parser-implementations"]
version = "1.0.0-alpha.2"
edition = "2024"
description = "A BEVE data format for Serde"
license = "MIT"
documentation = "https://docs.rs/serde-beve"
readme = "README.md"
repository = "https://github.com/justdeeevin/serde-beve"
keywords = ["beve", "serde", "serialization"]
rust-version = "1.85.1"

[dependencies]
serde = "1.0.219"
thiserror = "2.0.12"
half = { version = "2.6.0", optional = true }

[features]
default = []
half = ["dep:half"]

[package.metadata.docs.rs]
all-features = true
